增加必要的运行时参数