@@ -42,6 +42,12 @@ public class TimeServer {
         }
     }
 
+    /*
+运行时，需要在 vm option 中增加一下配置：
+--add-opens
+java.base/jdk.internal.misc=ALL-UNNAMED
+-Dio.netty.tryReflectionSetAccessible=true
+     */
     public static void main(String[] args) throws Exception {
         int port = 8080;
         if (args != null && args.length > 0) {
